Fixes layout issue in Chrome on the FM computer.

--- a/app/assets/stylesheets/playlist.css.scss
+++ b/app/assets/stylesheets/playlist.css.scss
@@ -1,3 +1,6 @@
+.and-clear {
+  clear: both;
+}
 .field-withflag {
   float: left;
   width: 85%;
